Hide input container if already solved today

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         </div>
         <button id="guess">Submit Guess</button>
     </div>
+    <div id="alreadySolved" style="display: none">
+        You've already solved today's Parabole 🤴
+        <br>
+        Come back tomorrow!
+    </div>
     <div id="hints"></div>
     <div id="attempts">Attempts: 0</div>
     <div id="stats"></div>
